Refactored for deploying